# allisone_exercise

./: .gitignore  .pre-commit-config.yaml  ML_coding_exercise.ipynb  Notebook.ipynb  README.md  api.py  characteristics.py  main.py  preprocess.py  pyproject.toml  run_app.sh  test.py
src/: main.py
src/allisone_exercise/api/: app.py
src/allisone_exercise/domain/: model.py  preprocess.py
src/allisone_exercise/utils/objects/: base_object.py  constant.py
src/app/: api.py
src/domain/: preprocess.py
test/: test.py
