[tool.poetry]
name = "allisone-exercise"
version = "0.1.0"
description = "Small project for internship submission"
authors = ["EmmaCov <emma.covili@dauphine.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
