[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.poetry]
name = "allisone-exercise"
version = "0.1.0"
description = "Small project for internship submission"
authors = ["EmmaCov <emma.covili@dauphine.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
fastapi = "^0.109.0"
black = "24.1.1"
isort = "5.13.2"
ruff = "0.1.14"
uvicorn = "^0.27.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.6.1"
isort = "5.13.2"
black = "24.1.1"
ruff = "0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
